# VORTEX

./: .gitignore  CMakeLists.txt  CloseIssue.md  Doxyfile  README.md
cmake/: Dependencies.cmake
docs/html/: CameraController_8cpp.html  CameraController_8cpp__incl.dot  CameraController_8cppm.html  CameraController_8cppm.js  CameraController_8cppm__incl.dot  CameraStruct_8cppm.html  CameraStruct_8cppm.js  CameraStruct_8cppm__incl.dot  Chunk_8cppm.html  Chunk_8cppm.js  Chunk_8cppm__incl.dot  ColliderBuilder_8cpp.html  ColliderBuilder_8cpp.js  ColliderBuilder_8cpp__incl.dot  ColliderBuilder_8cppm.html  ColliderBuilder_8cppm.js  ColliderBuilder_8cppm__incl.dot  Context_8cpp.html  Context_8cpp__incl.dot  Context_8cppm.html  Context_8cppm.js  Context_8cppm__incl.dot  Core_8cppm.html  Core_8cppm.js  Core_8cppm__incl.dot  Editor_8cpp.html  Editor_8cpp.js  Editor_8cpp__incl.dot  Editor_8cppm.html  Editor_8cppm.js  Editor_8cppm__incl.dot  Engine_8cpp.html  Engine_8cpp.js  Engine_8cpp__incl.dot  Entity_8cppm.html  Entity_8cppm.js  Entity_8cppm__incl.dot  FXAAPipeline_8cpp.html  FXAAPipeline_8cpp__incl.dot  FXAAPipeline_8cppm.html  (+510 more)
docs/html/search/: all_1.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  (+78 more)
docs/latex/: CameraController_8cpp.tex  CameraController_8cpp.tex.tmp  CameraController_8cpp__incl.dot  CameraController_8cppm.tex  CameraController_8cppm__incl.dot  CameraStruct_8cppm.tex  CameraStruct_8cppm__incl.dot  Chunk_8cppm.tex  Chunk_8cppm__incl.dot  ColliderBuilder_8cpp.tex  ColliderBuilder_8cpp__incl.dot  ColliderBuilder_8cppm.tex  ColliderBuilder_8cppm__incl.dot  Context_8cpp.tex  Context_8cpp__incl.dot  Context_8cppm.tex  Context_8cppm__incl.dot  Core_8cppm.tex  Core_8cppm__incl.dot  Editor_8cpp.tex  Editor_8cpp__incl.dot  Editor_8cppm.tex  Editor_8cppm__incl.dot  Engine_8cpp.tex  Engine_8cpp__incl.dot  Entity_8cppm.tex  Entity_8cppm__incl.dot  FXAAPipeline_8cpp.tex  FXAAPipeline_8cpp__incl.dot  FXAAPipeline_8cppm.tex  FXAAPipeline_8cppm__incl.dot  Graphics_8cpp.tex  Graphics_8cpp__incl.dot  Graphics_8cppm.tex  Graphics_8cppm__incl.dot  Hierarchy_8cppm.tex  Hierarchy_8cppm__incl.dot  Jolt_8cpp.tex  Jolt_8cpp__incl.dot  Logger_8cppm.tex  (+179 more)
shaders/: explosion.comp  fxaa.comp  raytracing.comp  taa.comp  upscale.comp  voxel.frag  voxel.vert
src/core/: CameraController.cppm  Core.cppm  Logger.cppm  Profiler.cppm  Profiller.cppm
src/core/internal/: CameraController.cpp  Engine.cpp  Profiler.cpp
src/editor/: Editor.cppm
src/editor/internal/: Editor.cpp
src/graphics/: CameraStruct.cppm  Context.cppm  Graphics.cppm  Light.cppm  RenderResources.cppm  SceneManager.cppm  Shader.cppm  Swapchain.cppm  UI.cppm  Window.cppm
src/graphics/internal/: Context.cpp  Graphics.cpp  RayTracingPipeline.cpp  RenderResources.cpp  SceneManager.cpp  ShaderCompiler.cpp  Swapchain.cpp  UI.cpp  VulkanContext.cpp  Window.cpp
src/graphics/pipelines/: FXAAPipeline.cppm  RasterPipeline.cppm  RayTracingPipeline.cppm  TAAPipeline.cppm  UpscalePipeline.cppm
src/graphics/pipelines/internal/: FXAAPipeline.cpp  RasterPipeline.cpp  TAAPipeline.cpp  UpscalePipeline.cpp
src/memory/: Memory.cppm
src/memory/internal/: MemoryAllocator.cpp
src/mesh/: MeshConverter.cppm  MeshObject.cppm
src/mesh/internal/: MeshConverter.cpp
src/physics/: ColliderBuilder.cppm  Physics.cppm
src/physics/internal/: ColliderBuilder.cpp  Jolt.cpp
src/voxel/: BeamOptimization.cppm  Chunk.cppm  Data.cppm  Destruction.cppm  Entity.cppm  Hierarchy.cppm  Material.cppm  Object.cppm  Palette.cppm  ShapeBuilder.cppm  Voxel.cppm  World.cppm
src/voxel/internal/: Destruction.cpp
tests/: CMakeLists.txt
